--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -452,6 +452,33 @@ select {
   @apply rounded-none p-0;
 }
 
+.codetabs > .panel:not([aria-expanded]) .highlight .chroma > code > .line:not(.hl),
+.codetabs > .panel:not([aria-expanded]) .highlight .chroma > .lntable .lntd code > .lnt,
+.codetabs > .panel:not([aria-expanded]) .highlight .chroma > .lntable .lntd code > .line:not(.hl) {
+  @apply hidden;
+}
+
+.codetabs > .panel:where([aria-expanded]) .highlight .chroma > code > .line:not(.hl),
+.codetabs > .panel:where([aria-expanded]) .highlight .chroma > .lntable .lntd code > .lnt,
+.codetabs > .panel:where([aria-expanded]) .highlight .chroma > .lntable .lntd code > .line:not(.hl) {
+  @apply opacity-60;
+}
+
+.codetabs > .panel .highlight .chroma > code > .hl,
+.codetabs > .panel .highlight .chroma > .lntable .lntd code > .hl {
+  @apply bg-inherit;
+}
+
+.codetabs > .panel:where([aria-expanded]) #visibility-on,
+.codetabs > .panel:not([aria-expanded]) #visibility-off {
+  @apply hidden;
+}
+
+.codetabs > .panel:where([aria-expanded]) #visibility-off,
+.codetabs > .panel:not([aria-expanded]) #visibility-on {
+  @apply block;
+}
+
 .download-cards {
   @apply space-y-6 lg:space-y-0 max-w-[47rem] lg:max-w-full mx-auto lg:mx-0 lg:grid grid-cols-2 gap-x-6 items-start mb-[3.25rem];
 }
