--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -526,6 +526,41 @@ html {
   scrollbar-gutter: stable;
 }
 
+/* Railroad diagrams */
+svg.railroad-diagram {
+  background-color:rgba(0,0,0,0);
+}
+
+svg.railroad-diagram path {
+  stroke-width:3;
+  stroke:black;
+  fill: rgba(0,0,0,0);
+}
+
+svg.railroad-diagram text {
+  font:bold 14px monospace;
+  text-anchor:middle;
+}
+
+svg.railroad-diagram text.label{
+  text-anchor:start;
+}
+
+svg.railroad-diagram text.comment{
+  font:italic 12px monospace;
+}
+
+svg.railroad-diagram rect{
+  stroke-width:3;
+  stroke: black;
+  fill: hsl(120,100%,90%);
+}
+svg.railroad-diagram rect.group-box {
+  stroke: gray;
+  stroke-dasharray: 10 5;
+  fill: none;
+}
+
 /* Chroma syntax highlighting
 /* Background */
 .bg {
