--- a/layouts/partials/tabbed-clients-example.html
+++ b/layouts/partials/tabbed-clients-example.html
@@ -7,14 +7,16 @@
 {{ $languages := index $.Site.Data.examples $id }}
 {{ range $language := $.Site.Params.clientsexamples }}
     {{ $example := index $languages $language }}
-    {{ $examplePath := index $example "target" }}
-    {{ $options := printf "linenos=false" }}
-    {{ if isset $example "highlight" }}
-        {{ $options = printf "%s,hl_lines=%s" $options (delimit (index $example "highlight") " ") }}
+    {{ if $example }}
+        {{ $examplePath := index $example "target" }}
+        {{ $options := printf "linenos=false" }}
+        {{ if isset $example "highlight" }}
+            {{ $options = printf "%s,hl_lines=%s" $options (delimit (index $example "highlight") " ") }}
+        {{ end }}
+        {{ $params := dict "language" $language "contentPath" $examplePath "options" $options }}
+        {{ $content := partial "tabs/source.html" $params }}
+        {{ $tabs = $tabs | append (dict "title" $language "content" $content) }}
     {{ end }}
-    {{ $params := dict "language" $language "contentPath" $examplePath "options" $options }}
-    {{ $content := partial "tabs/source.html" $params }}
-    {{ $tabs = $tabs | append (dict "title" $language "content" $content) }}
 {{ end }}
 
 {{ $params := dict "id" $id "tabs" $tabs }}
