--- a/layouts/partials/tabbed-clients-example.html
+++ b/layouts/partials/tabbed-clients-example.html
@@ -1,3 +1,4 @@
+{{ $step := .Scratch.Get "step" }}
 {{ $id := .Scratch.Get "example" }}
 {{ if not (isset $.Site.Data.examples $id) }}
     {{ warnf "[tabbed-clients-example] Example not found %q for %q" $id $.Page }}
@@ -10,8 +11,13 @@
     {{ if $example }}
         {{ $examplePath := index $example "target" }}
         {{ $options := printf "linenos=false" }}
-        {{ if isset $example "highlight" }}
-            {{ $options = printf "%s,hl_lines=%s" $options (delimit (index $example "highlight") " ") }}
+
+        {{ if and (isset $example "steps") (isset $example.steps $step) }}
+            {{ $options = printf "%s,hl_lines=%s" $options (index $example.steps $step) }}
+        {{ else }}
+            {{ if isset $example "highlight" }}
+                {{ $options = printf "%s,hl_lines=%s" $options (delimit (index $example "highlight") " ") }}
+            {{ end }}
         {{ end }}
         {{ $params := dict "language" $language "contentPath" $examplePath "options" $options }}
         {{ $content := partial "tabs/source.html" $params }}
@@ -19,5 +25,5 @@
     {{ end }}
 {{ end }}
 
-{{ $params := dict "id" $id "tabs" $tabs }}
+{{ $params := dict "id" (printf "%s-step%d" $id $step) "tabs" $tabs }}
 {{ partial "tabs/wrapper.html" $params }}
