--- a/layouts/shortcodes/clients-example.html
+++ b/layouts/shortcodes/clients-example.html
@@ -1,3 +1,4 @@
 {{ .Scratch.Set "example" (.Get 0) }}
 {{ .Scratch.Set "step" (.Get 1) }}
+{{ .Scratch.Set "lang" (.Get 2) }}
 {{ partial "tabbed-clients-example.html" . }}
