--- a/layouts/shortcodes/clients-example.html
+++ b/layouts/shortcodes/clients-example.html
@@ -1,4 +1,5 @@
 {{ .Scratch.Set "example" (.Get 0) }}
 {{ .Scratch.Set "step" (.Get 1) }}
 {{ .Scratch.Set "lang" (.Get 2) }}
+{{ .Scratch.Set "redisCommands" .Inner }}
 {{ partial "tabbed-clients-example.html" . }}
