--- a/layouts/partials/tabbed-clients-example.html
+++ b/layouts/partials/tabbed-clients-example.html
@@ -21,8 +21,8 @@
         {{ $examplePath := index $example "target" }}
         {{ $options := printf "linenos=false" }}
 
-        {{ if and (ne $step "") (isset $example "steps") (isset $example.steps $step) }}
-            {{ $options = printf "%s,hl_lines=%s" $options (index $example.steps $step) }}
+        {{ if and (ne $step "") (isset $example "named_steps") (isset $example.named_steps $step) }}
+            {{ $options = printf "%s,hl_lines=%s" $options (index $example.named_steps $step) }}
         {{ else }}
             {{ if isset $example "highlight" }}
                 {{ $options = printf "%s,hl_lines=%s" $options (delimit (index $example "highlight") " ") }}
