--- a/layouts/partials/tabs/wrapper.html
+++ b/layouts/partials/tabs/wrapper.html
@@ -36,8 +36,9 @@
                 <div class="tooltip relative inline-block">
                     <span class="tooltiptext hidden bg-slate-200 rounded rounded-mx text-slate-800 text-center text-xs p-1 absolute right-6 bottom-4">Copied!</span>
                 </div>
-
             </button>
+            {{ end }}
+            {{ if or (ne (index $tab "title") "redis-cli") (lt (index $tab "limit") 100) }}
             <button tabindex="1" class="visibility-button text-neutral-400 hover:text-slate-100 bg-slate-600 absolute top-2 right-2 h-7 w-7 mr-2 mt-2 p-1 rounded rounded-mx"
                     title="Toggle visibility" aria-controls="{{ $pid }}" onclick="toggleVisibleLines(this)">
                 <svg id="visibility-off" class="hidden" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" fill="currentColor">
