--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -423,16 +423,26 @@ select {
 }      
 
 .codetabs .label {
-  min-width: 4rem;
+  min-width: 2rem;
+  line-height: 0.852rem;
+  color: #8CA0AD;
 }
+
+.codetabs .label:active {
+  color: white;
+}
+
 
 .codetabs .radiotab:focus + .label {
   @apply bg-transparent text-indigo-600;
 }
 
 .codetabs .radiotab:checked + .label {
-  @apply bg-slate-900 border-slate-900 not-italic;
+  @apply border-slate-900 not-italic;
+  @apply bg-slate-600 text-white pt-1 mt-2.5;
+
 }
+
 
 .codetabs .radiotab:checked + .label + .panel {
   @apply block;
@@ -443,9 +453,80 @@ select {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
+.codetabs.cli + .cli-footer {
+  border-bottom-left-radius: 0.375rem;
+  border-bottom-right-radius: 0.375rem;
+}
 
-.codetabs > .panel .highlight .chroma .lntd > pre {
-  @apply p-0;
+.cli-footer {
+  background-color: #282F43;
+  min-height: 32px;
+}
+
+.cli-footer a.rounded {
+  background-color: #3E4977;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.cli-footer a.rounded:hover {
+  background-color: #3E4981;
+}
+
+.codetabs.cli > .panel .highlight > .chroma {
+    margin: 1rem 1rem 0.1rem 0.1rem;
+    overflow-x: hidden;
+    padding-bottom: 0;
+}
+
+.codetabs .chroma .language-plaintext .cl {
+    white-space: break-spaces;
+}
+
+.codetabs > .panel .highlight .chroma > .lntable td:first-child .chroma {
+  @apply rounded-none p-0;
+}
+
+.codetabs > .panel .highlight .chroma > .lntable td:last-child .chroma {
+  @apply rounded-none p-0;
+}
+
+.codetabs > .panel:not([aria-expanded]) .highlight .chroma > code > .line:not(.hl),
+.codetabs > .panel:not([aria-expanded]) .highlight .chroma > .lntable .lntd code > .lnt,
+.codetabs > .panel:not([aria-expanded]) .highlight .chroma > .lntable .lntd code > .line:not(.hl) {
+  @apply hidden;
+}
+
+.codetabs > .panel:where([aria-expanded]) .highlight .chroma > code > .line:not(.hl),
+.codetabs > .panel:where([aria-expanded]) .highlight .chroma > .lntable .lntd code > .lnt,
+.codetabs > .panel:where([aria-expanded]) .highlight .chroma > .lntable .lntd code > .line:not(.hl) {
+  @apply opacity-60;
+}
+
+.codetabs > .panel:not([aria-expanded]) .highlight .chroma > .language-Go > .hl {
+  tab-size: 3ch;
+  left: -3ch;
+  position: relative;
+}
+
+.codetabs > .panel:not([aria-expanded]) .highlight .chroma > .language-C\# > .hl,
+.codetabs > .panel:not([aria-expanded]) .highlight .chroma > .language-Java > .hl
+{
+  left: -8ch;
+  position: relative;
+}
+
+.codetabs > .panel .highlight .chroma > code > .hl,
+.codetabs > .panel .highlight .chroma > .lntable .lntd code > .hl {
+  @apply bg-inherit;
+}
+
+.codetabs > .panel:where([aria-expanded]) #visibility-on,
+.codetabs > .panel:not([aria-expanded]) #visibility-off {
+  @apply hidden;
+}
+
+.codetabs > .panel:where([aria-expanded]) #visibility-off,
+.codetabs > .panel:not([aria-expanded]) #visibility-on {
+  @apply block;
 }
 
 .download-cards {
@@ -558,24 +639,34 @@ html {
   @apply align-top p-0 m-0 border-0;
 }
 
+.chroma .lntd:last-child {
+  @apply flex-1;
+}
+
 /* LineTable */
 .chroma .lntable {
-  @apply p-0 m-0 border-0 w-auto;
+  @apply p-0 m-0 border-0 min-w-full;
 }
 
 /* LineHighlight */
 .chroma .hl {
-  @apply bg-yellow-100;
+  @apply flex bg-indigo-900/80;
 }
+
+code
 
 /* LineNumbersTable */
 .chroma .lnt {
-  @apply text-slate-400 whitespace-pre mr-4 px-2;
+  @apply text-slate-400 whitespace-pre pl-2 pr-4;
 }
 
 /* LineNumbers */
 .chroma .ln {
-  @apply text-slate-400 whitespace-pre mr-4 px-4;
+  @apply text-slate-400 whitespace-pre px-4;
+}
+
+.chroma .lntable tr {
+  @apply flex items-stretch;
 }
 
 /* Line */
@@ -929,4 +1020,10 @@ html {
 /* TextWhitespace */
 .chroma .w {
   @apply text-slate-500;
+}
+/* Safari input[type = radio] fix for tabs */
+input[type="radio"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
