--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -8,7 +8,13 @@
     <div class="w-full max-w-[47rem] py-12">
       {{ partial "breadcrumbs" . }}
       <section class="prose prose-slate w-full max-w-[47rem] py-12">
-        <h1>{{ .Title }}</h1>
+        <h1>
+          {{ if and (isset .Params "stack") (eq .Params.stack true)}}
+          {{ partial "icons/logo-stack.html" (dict "context" . "class" "stack-logo-inline") }}
+          {{ end }}
+          {{ .Title }}
+        </h1>
+
         {{ with .Params.description }}<p class="text-lg -mt-5 mb-10">{{ . | markdownify }}</p>{{ end }}
         {{ .Content }}
         <nav>
