--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -51,7 +51,7 @@
         {{ partial "mathjax.html" }}
     {{ end }}
   </head>
-  <body class="antialiased tracking-[-0.01em]">
+  <body class="antialiased tracking-[-0.01em] bg-white">
     {{ if hugo.IsProduction -}}
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ .Site.Params.tagManagerId }}"
         height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
