Set homepage headings to black
Complements #105

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -7,7 +7,7 @@
     <header class="bg-gradient-to-b from-indigo-50/30 via-indigo-50/30 to-white">
       <div class="lg:grid grid-cols-2 gap-x-10 items-center container max-w-[85rem] mx-auto px-4 sm:px-8 pt-20 pb-28">
         <div class="text-center lg:text-left">
-          <h1 class="font-display text-6xl leading-none midnight-redis font-medium mb-4">Redis</h1>
+          <h1 class="font-display text-6xl leading-none font-medium mb-4 text-slate-900">Redis</h1>
           <p class="text-redis-neutral-800 text-xl mb-7 max-w-2xl mx-auto lg:mx-0">
             The open source, in-memory data store used by millions of developers as a database, cache, streaming engine, and message&nbsp;broker.
           </p>
@@ -36,7 +36,7 @@
     </header>
     <article class="">
       <section class="text-center pb-28 container max-w-[85rem] mx-auto px-4 sm:px-8">
-        <h2 class="font-display text-4xl leading-tight text-midnight-700 font-semibold mb-4 -mt-4">
+        <h2 class="font-display text-4xl leading-tight text-slate-900 font-semibold mb-4 -mt-4">
           A vibrant, open source database
         </h2>
         <p class="text-redis-neutral-800 text-lg max-w-2xl mx-auto mb-12">
@@ -71,7 +71,7 @@
                 >{{ with resources.Get "icons/in-memory-data-structures-icon.svg" }}{{
                 ( . | minify).Content | safeHTML }}{{ end }}</span
               >
-              <h3 class="font-semibold text-xl mb-2">
+              <h3 class="font-semibold text-xl mb-2 text-slate-900">
                 In-memory data structures
               </h3>
               <p class="text-redis-neutral-800 mb-5">
@@ -88,7 +88,7 @@
                 >{{ with resources.Get "icons/programmability.svg" }}{{ ( . |
                 minify).Content | safeHTML }}{{ end }}</span
               >
-              <h3 class="font-semibold text-xl mb-2">
+              <h3 class="font-semibold text-xl mb-2 text-slate-900">
                 Programmability
               </h3>
               <p class="text-redis-neutral-800 mb-5">
@@ -105,7 +105,7 @@
                 >{{ with resources.Get "icons/extensibility-icon.svg" }}{{ ( . |
                 minify).Content | safeHTML }}{{ end }}</span
               >
-              <h3 class="font-semibold text-xl mb-2">
+              <h3 class="font-semibold text-xl mb-2 text-slate-900">
                 Extensibility
               </h3>
               <p class="text-redis-neutral-800 mb-5">
@@ -122,7 +122,7 @@
                 >{{ with resources.Get "icons/persistence-icon.svg" }}{{ ( . |
                 minify).Content | safeHTML }}{{ end }}</span
               >
-              <h3 class="font-semibold text-xl mb-2">
+              <h3 class="font-semibold text-xl mb-2 text-slate-900">
                 Persistence
               </h3>
               <p class="text-redis-neutral-800 mb-5">
@@ -139,7 +139,7 @@
                 >{{ with resources.Get "icons/cluster.svg" }}{{ ( . | minify).Content
                 | safeHTML }}{{ end }}</span
               >
-              <h3 class="font-semibold text-xl mb-2">
+              <h3 class="font-semibold text-xl mb-2 text-slate-900">
                 Clustering
               </h3>
               <p class="text-redis-neutral-800 mb-5">
@@ -156,7 +156,7 @@
                 >{{ with resources.Get "icons/availability.svg" }}{{ ( . |
                 minify).Content | safeHTML }}{{ end }}</span
               >
-              <h3 class="font-semibold text-xl mb-2">
+              <h3 class="font-semibold text-xl mb-2 text-slate-900">
                 High availability
               </h3>
               <p class="text-redis-neutral-800 mb-5">
@@ -178,7 +178,7 @@
           </h2>
           <ul class="flex flex-col sm:grid md:grid-cols-2 xl:grid-cols-3 gap-14">
             <li class="flex flex-col h-full">
-              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
+              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500 text-slate-900">
                 Real-time data store
               </h3>
               <p class="text-redis-neutral-800">
@@ -188,7 +188,7 @@
               </p>
             </li>
             <li>
-              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
+              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500 text-slate-900">
                 Caching & session storage
               </h3>
               <p class="text-redis-neutral-800">
@@ -197,7 +197,7 @@
               </p>
             </li>
             <li>
-              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
+              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500 text-slate-900">
                 Streaming & messaging
               </h3>
               <p class="text-redis-neutral-800">
@@ -253,7 +253,7 @@
           <!-- <span class="redis-cube w-100 text-center">{{ with resources.Get "icons/redis-cube.svg" }}{{ ( . | minify).Content | safeHTML }}{{ end }}</span> -->
           <div class="flex justify-center mx-auto">
             <a href="/download/" class="button-xl button-indigo">Download Stack</a>
-            <a href="/docs/stack/" class="button-xl button-outline ml-2">Learn more</a>
+            <a href="/docs/stack/" class="button-xl button-outline ml-2 text-slate-900">Learn more</a>
           </div>
         </div>
       </section>
@@ -265,7 +265,7 @@
           </h2>
           <ul class="flex flex-col sm:grid md:grid-cols-2 xl:grid-cols-3 gap-14">
             <li class="flex flex-col h-full">
-              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
+              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500 text-slate-900">
                 Searchable Redis
               </h3>
               <p class="text-redis-neutral-800">
@@ -274,7 +274,7 @@
               </p>
             </li>
             <li class="flex flex-col h-full">
-              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
+              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500 text-slate-900">
                 Document database
               </h3>
               <p class="text-redis-neutral-800">
@@ -283,7 +283,7 @@
               </p>
             </li>
             <li class="flex flex-col h-full">
-              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
+              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500 text-slate-900">
                 Telemetry
               </h3>
               <p class="text-redis-neutral-800">
@@ -293,7 +293,7 @@
               </p>
             </li>
             <li class="flex flex-col h-full">
-              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
+              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500 text-slate-900">
                 Identity and resource management
               </h3>
               <p class="text-redis-neutral-800">
@@ -302,7 +302,7 @@
               </p>
             </li>
             <li class="flex flex-col h-full">
-              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
+              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500 text-slate-900">
                 Vector similarity search
               </h3>
               <p class="text-redis-neutral-800">
@@ -311,7 +311,7 @@
               </p>
             </li>
             <li class="flex flex-col h-full">
-              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
+              <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500 text-slate-900">
                 Fraud detection
               </h3>
               <p class="text-redis-neutral-800">
@@ -332,7 +332,7 @@
         </h2>
         <ul class="flex flex-col sm:grid md:grid-cols-2 xl:grid-cols-3 gap-14">
           <li class="flex flex-col h-full">
-            <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
+            <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500 text-slate-900">
               Preparation
             </h3>
             <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/getting-started/installation/">
@@ -345,7 +345,7 @@
             </a>
           </li>
           <li class="flex flex-col h-full">
-            <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
+            <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500 text-slate-900">
               Countdown
             </h3>
             <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/data-types/">
@@ -358,7 +358,7 @@
             </a>
           </li>
           <li class="flex flex-col h-full">
-            <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500">
+            <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500 text-slate-900">
               Liftoff
             </h3>
             <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/reference/patterns/">
