Removes graph from the home page

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -228,7 +228,7 @@
                 {{ ( . | minify).Content | safeHTML }}{{ end }}
               </span>
               <p>
-                Redis Stack Server lets you build applications with searchable JSON, time series and graph data models, and extended probabilistic data structures.
+                Redis Stack Server lets you build applications with searchable JSON and time series data models, and extended probabilistic data structures.
               </p>
             </li>
             <li class="w-full text-sm font-medium text-slate-900 p-6 bg-white border border-slate-900/10 bg-clip-padding shadow-md shadow-slate-900/5 rounded-lg flex flex-col justify-start">
@@ -253,7 +253,7 @@
           <!-- <span class="redis-cube w-100 text-center">{{ with resources.Get "icons/redis-cube.svg" }}{{ ( . | minify).Content | safeHTML }}{{ end }}</span> -->
           <div class="flex justify-center mx-auto">
             <a href="/download/" class="button-xl button-indigo">Download Stack</a>
-            <a href="/docs/stack/" class="button-xl button-outline ml-2 text-slate-900">Learn more</a>
+            <a href="/docs/stack/about/" class="button-xl button-outline ml-2 text-slate-900">Learn more</a>
           </div>
         </div>
       </section>
@@ -315,7 +315,7 @@
                 Fraud detection
               </h3>
               <p class="text-redis-neutral-800">
-                All the tools to detect fraud in real time, with graph analysis,
+                All the tools to detect fraud in real time, 
                 probabilistic queries, vector search, and even processing using
                 streams.
               </p>
