Add partial and shortcode to support page banners

--- a/layouts/commands/single.html
+++ b/layouts/commands/single.html
@@ -23,6 +23,9 @@
             {{- end }}
           </div>
         {{ end }}
+        {{ if .Params.bannerText }}
+          {{ partial "banner-article.html" . }}
+        {{ end }}
         {{ $syntax := .Params.syntax_fmt }}
         {{ if isset .Params "syntax" }}
           {{ if .Params.syntax }}
