--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -20,12 +20,14 @@
       el.classList.remove('hidden');
     }
   </script>
-  {{ $content | emojify | markdownify }}
   {{ if isset $.Site.Params "bannerlink" }}
-  <a href="{{$.Site.Params.bannerlink}}" class="ml-8 group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start">
-    Learn more
+  <a href="{{$.Site.Params.bannerlink}}" class="group w-full items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start">
+    {{ $content | emojify | markdownify }}
+    <span class="ml-8">Learn more</span>
     <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">→</span>
   </a>
+  {{ else }}
+    {{ $content | emojify | markdownify }}
   {{ end }}
 </div>
 {{ end }}
