--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -21,7 +21,7 @@
     }
   </script>
   {{ if isset $.Site.Params "bannerlink" }}
-  <a href="{{$.Site.Params.bannerlink}}" class="group w-full items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start">
+  <a href="{{$.Site.Params.bannerlink}}" class="group w-full inline-block items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start">
     {{ $content | emojify | markdownify }}
     <span class="ml-8">Learn more</span>
     <span class="ml-1.5 text-redis-indigo-500 opacity-50 group-hover:opacity-100 transition group-hover:translate-x-1">→</span>
