--- a/layouts/commands/list.html
+++ b/layouts/commands/list.html
@@ -51,7 +51,7 @@
             <option value="search" data-kind="stack">Search</option>
             <option value="suggestion" data-kind="stack">Auto-Suggest</option>
             <option value="tdigest" data-kind="stack">T-Digest</option>
-            <option value="timeseries" data-kind="stack">Time Series</option>
+            <option value="timeseries" data-kind="stack">Time series</option>
             <option value="topk" data-kind="stack">Top-K</option>
           </optgroup>
         </select>
