Adds a site-wide top banner (#112)

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1040,6 +1040,12 @@ input[type="radio"] {
     width: 2em;
 }
 
+
+.site-banner {
+  background: radial-gradient(#F2F3FC,#D2D7FE);
+  @apply w-full py-2 text-center font-medium text-base text-midnight-700
+}
+
 .banner-article {
   /*background-color: #f7f7f7;*/
   background-color: #fff8dc;
@@ -1057,3 +1063,4 @@ input[type="radio"] {
 .banner-article a {
   text-decoration: underline;
 }
+
