--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -38,12 +38,14 @@
         {{ end }}
         
         {{ .Content }}
-        <nav>
-          {{ range .CurrentSection.Pages }}
-            <a href="{{ .RelPermalink }}"{{ with .Params.manualLinkTitle }} title="{{ . }}"{{ end }}{{ with .Params.manualLinkTarget }} target="{{ . }}"{{ if eq . "_blank" }} rel="noopener"{{ end }}{{ end }}>{{- .Title -}}</a>
-            <p>{{ .Description | markdownify }}</p>
-          {{ end }}
-        </nav>
+        {{ if not .Params.hideListLinks }}
+          <nav>
+            {{ range .CurrentSection.Pages }}
+              <a href="{{ .RelPermalink }}"{{ with .Params.manualLinkTitle }} title="{{ . }}"{{ end }}{{ with .Params.manualLinkTarget }} target="{{ . }}"{{ if eq . "_blank" }} rel="noopener"{{ end }}{{ end }}>{{- .Title -}}</a>
+              <p>{{ .Description | markdownify }}</p>
+            {{ end }}
+          </nav>
+        {{ end }}
         {{ partial "feedback.html" . }}
       </section>
     </div>
