Updated the button on the home page to point to the new quick start guides

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -11,7 +11,7 @@
           <p class="text-redis-neutral-800 text-xl mb-7 max-w-2xl mx-auto lg:mx-0">
             The open source, in-memory data store used by millions of developers as a database, cache, streaming engine, and message&nbsp;broker.
           </p>
-          <a href="/docs/getting-started/" class="button-xl button-indigo">Get Started</a>
+          <a href="/docs/get-started/" class="button-xl button-indigo">Get Started</a>
           <a href="/docs/" class="button-xl button-outline ml-2">Read the docs</a>
         </div>
         <div class="relative left-3.5 lg:left-0 mt-8 lg:mt-0 mx-auto lg:ml-0  lg:-mr-7 pt-7 pr-7 bg-no-repeat bg-right-top max-w-2xl lg:max-w-none" style="background-image: url('/images/triangle-lines.svg')">
