--- a/layouts/home.html
+++ b/layouts/home.html
@@ -303,11 +303,13 @@
             </li>
             <li class="flex flex-col h-full">
               <h3 class="font-semibold text-xl mb-2 pt-5 border-t-2 border-indigo-500 text-slate-900">
-                Vector similarity search
+                Vector search
               </h3>
               <p class="text-redis-neutral-800">
-                Query vector embeddings to power images search, recommendation
-                engines, and natural language text processing.
+                Develop AI-powered applications by querying vector embeddings.
+                You can use Redis as a vector database to implement recommendation systems,
+                Retrieval Augmented Generation (RAG), LLM semantic caching, and more.
+                See the <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/get-started/vector-database/">Redis as a vector database quick start guide</a> for more information.
               </p>
             </li>
             <li class="flex flex-col h-full">
