--- a/layouts/home.html
+++ b/layouts/home.html
@@ -278,8 +278,8 @@
                 Document database
               </h3>
               <p class="text-redis-neutral-800">
-                Model domain entirely in Redis, and query your JSON data efficiently
-                without ever having to use a cache.
+                Leverage JSON and its flexible data model to use Redis as a document database. Model, search, and query your data efficiently without needing an additional cache. 
+                See the <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/get-started/document-database/">Redis as a document database quick start guide</a> for more information.
               </p>
             </li>
             <li class="flex flex-col h-full">
