Shortened the quick start guide text

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -279,7 +279,7 @@
               </h3>
               <p class="text-redis-neutral-800">
                 Leverage JSON and its flexible data model to use Redis as a document database. Model, search, and query your data efficiently without needing an additional cache. 
-                See the <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/get-started/document-database/">Redis as a document database quick start guide</a> for more information.
+                See the <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/get-started/document-database/">quick start guide</a> for more information.
               </p>
             </li>
             <li class="flex flex-col h-full">
@@ -309,7 +309,7 @@
                 Develop AI-powered applications by querying vector embeddings.
                 You can use Redis as a vector database to implement recommendation systems,
                 Retrieval Augmented Generation (RAG), LLM semantic caching, and more.
-                See the <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/get-started/vector-database/">Redis as a vector database quick start guide</a> for more information.
+                See the <a class="group inline-flex items-center text-midnight-700 hover:text-indigo-600 font-medium mt-auto self-start" href="/docs/get-started/vector-database/">quick start guide</a> for more information.
               </p>
             </li>
             <li class="flex flex-col h-full">
