Some cleanups in regards to the new featured content section

--- a/layouts/home.html
+++ b/layouts/home.html
@@ -9,7 +9,7 @@
         <div class="text-center lg:text-left">
           <h1 class="font-display text-6xl leading-none font-medium mb-4 text-slate-900">Redis</h1>
           <p class="text-redis-neutral-800 text-xl mb-7 max-w-2xl mx-auto lg:mx-0">
-            The open-source, <b><a href="/docs/get-started/data-store/">in-memory data store</a></b> used by millions of developers as a <b><a href="/docs/get-started/vector-database/">vector database</a></b>, cache, <b><a href="/docs/get-started/document-database/">document database</a></b>, streaming engine, and message&nbsp;broker.
+            The open-source, <a class="hover:text-indigo-600 font-semibold" href="/docs/get-started/data-store/">in-memory data store</a> used by millions of developers as a <span class="font-semibold">cache</span>, <a class="hover:text-indigo-600 font-semibold" href="/docs/get-started/vector-database/">vector database</a>, <a class="hover:text-indigo-600 font-semibold" href="/docs/get-started/document-database/">document database</a>, <a class="hover:text-indigo-600 font-semibold" href="/docs/data-types/streams/">streaming engine</a>, and <span class="font-semibold">message broker</span>.
           </p>
           <a href="/docs/get-started/" class="button-xl button-indigo">Get Started</a>
           <a href="/docs/" class="button-xl button-outline ml-2">Read the docs</a>
@@ -82,7 +82,7 @@
         </ul>
       </div>
 
-      <section class="text-center pb-28 container max-w-[85rem] mx-auto px-4 sm:px-8">
+      <section class="text-center py-28 bg-gradient-to-b from-indigo-50/30 via-indigo-50/30 to-white">
         <h2 class="font-display text-4xl leading-tight text-slate-900 font-semibold mb-4 -mt-4">
           A vibrant, open-source database
         </h2>
